Remove padding on statistic componeent so we can layout a statistic inside a title control. This change affects the layout of all stats components and solves many of layout problems we have been having with stats.  We need to follow it up with a layout changes to the flowboard.
[https://urjuna.atlassian.net/browse/PO-305]

--- a/src/app/components/misc/statistic/statistic.css
+++ b/src/app/components/misc/statistic/statistic.css
@@ -27,5 +27,5 @@
 }
 
 .viz-item .ant-statistic {
-    padding: 10px;
+    padding: 0px;
 }
